--- a/Burn-oute-main/style.css
+++ b/Burn-oute-main/style.css
@@ -35,5 +35,32 @@ footer{
 #Transition{
 	width: 200px;
 	height: 200px;
-	opacity: 1;
+}
+
+#IMG_XX{
+	width: 120px;
+	height: 120px;
+	left: 100px;
+	top: 100px;
+}
+
+#IMG_XY{
+	width: 120px;
+	height: 120px;
+	left: 300px;
+	top: 100px;
+}
+
+#Select_XX{
+	width: 120px;
+	height: 120px;
+	left: 100px;
+	top: 100px;
+}
+
+#Select_XY{
+	width: 120px;
+	height: 120px;
+	left: 300px;
+	top: 100px;
 }
