--- a/style.css
+++ b/style.css
@@ -129,3 +129,77 @@ footer{
   text-decoration: none;
   cursor: pointer;
 }
+
+.Paragraphe{
+	text-align: center;
+	font-size: 20px;
+}
+
+.Titre_partie{
+	color: rgb(166, 54, 54);
+	font-size: 40px;
+	font-weight: bold;
+	text-align: center;
+}
+
+#Select_Screen{
+	position: relative;
+	width: 50%;
+	left : 25%;
+}
+
+.Lien_mail{
+	color:rgb(166, 54, 54);
+}
+
+nav {
+	text-align: center;
+}
+
+.menu_aide {
+	display: inline-block;
+}
+  
+.menu_aide > li {
+	float: left;
+	color: #e298e1;
+	width: 140px;
+	height: 40px;
+	line-height: 40px;
+	background: rgba(0, 0, 0, 0.7);
+	cursor: pointer;
+	font-size: 17px;
+}
+  
+.sub-menu_aide {
+	transform: scale(0);
+	transform-origin: top center;
+	transition: all 300ms ease-in-out;
+}
+  
+.sub-menu_aide > li {
+	font-size: 14px;
+	background: rgba(0, 0, 0, 0.8);
+	padding: 8px 0;
+	color: white;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+	transform: scale(0);
+	transform-origin: top center;
+	transition: all 300ms ease-in-out;
+}
+
+.sub-menu_aide > li:last-child {
+	border-bottom: 0;
+}
+
+.sub-menu_aide > li:hover {
+	background: black;
+}
+
+.menu_aide > li:hover .sub-menu_aide li {
+	transform: scale(1);
+}
+
+.menu_aide > li:hover .sub-menu_aide {
+	transform: scale(1);
+}
